navbar-secondary-under-main z-index fix

--- a/sass/theme/_navs.scss
+++ b/sass/theme/_navs.scss
@@ -745,7 +745,7 @@
         @include adjusted-size($font-size-base, '--body-font-size', '--header-secondary-font-size');
     }
     .navbar-secondary-under-main & {
-        z-index: 3;
+        z-index: 2;
         margin-bottom: var(--header-main-gap-height);
     }
     #navbar-nav-secondary-left .nav > li:first-child > .nav-link {
